erro em explicação alterado

--- a/analise-sentimento/analise.ipynb
+++ b/analise-sentimento/analise.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "analise.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true
     },
     "kernelspec": {
@@ -50,7 +51,7 @@
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "from sklearn.model_selection import cross_val_predict"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -71,7 +72,7 @@
       "source": [
         "base_de_dados = pd.read_csv('https://raw.githubusercontent.com/audreyemmely/DSProjects/master/analise-sentimento/analise-base.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,7 +81,7 @@
         "id": "2i71jiuIOMFg"
       },
       "source": [
-        "Olhando o existente na base de dados\n",
+        "Olhando os registros existentes na base de dados\n",
         "\n"
       ]
     },
@@ -88,7 +89,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0NAebFpaOMMa",
-        "outputId": "29107540-9aa7-4051-83e0-75c76f6ac26a",
+        "outputId": "091bce59-5a2b-486b-ba57-1ec9f1a2948b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -97,7 +98,7 @@
       "source": [
         "base_de_dados.head()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,15 +185,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Nlzf8wJCOMaa",
-        "outputId": "67a0368b-a651-4922-84c0-a5c656c91209",
+        "outputId": "58167ded-5f5f-484c-bb11-05c32b463169",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 68
         }
       },
       "source": [
         "base_de_dados.count()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,15 +225,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "FVj92KCgOMr5",
-        "outputId": "65c0e52f-0973-48d3-bfc0-0c622e0dc46e",
+        "outputId": "15fb427e-ac99-4516-dafa-6d036337b68d",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 68
         }
       },
       "source": [
         "base_de_dados[base_de_dados.Sentimento == 'felicidade'].count()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,15 +265,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "IRYHm5o9OxJ4",
-        "outputId": "61622049-fabe-4b36-8a63-6634767d6fc3",
+        "outputId": "624c5b7c-327b-46db-aef3-8290aa6ccf6c",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 68
         }
       },
       "source": [
         "base_de_dados[base_de_dados.Sentimento == 'raiva'].count()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,15 +305,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "z5qY0i1oOxYf",
-        "outputId": "a1b4a397-2783-4414-8321-a9f3fd167159",
+        "outputId": "b6c1d4de-6cf8-4e1a-e80d-61d247c90084",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 68
         }
       },
       "source": [
         "base_de_dados[base_de_dados.Sentimento == 'tristeza'].count()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,16 +354,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "nCob-tM8P2Pq",
-        "outputId": "af67095b-643a-4d27-aca0-27c3ed078f52",
+        "outputId": "78149388-0417-409c-e9bb-dbd56b01bd3a",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         }
       },
       "source": [
         "frases = base_de_dados['Frase'].values\n",
         "frases"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,16 +448,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "4JBcUg0HP2Ga",
-        "outputId": "64c5c462-92b3-434b-c59b-834fccccd634",
+        "outputId": "35ba7674-c814-4a82-92d0-5801a204518a",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 238
         }
       },
       "source": [
         "sentimentos = base_de_dados['Sentimento'].values\n",
         "sentimentos"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,9 +502,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gj2jsfBaVBKi",
-        "outputId": "f85f0341-70c8-41fc-85a3-d9993724e8c3",
+        "outputId": "e7e7d340-7ab1-4597-af23-e9b5039423e4",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 34
         }
       },
       "source": [
@@ -509,7 +517,7 @@
         "modelo = MultinomialNB()\n",
         "modelo.fit(frequencia, sentimentos)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,9 +546,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GDrf9EBlWdIZ",
-        "outputId": "48b53f24-c9ef-4394-f9ff-1be30d8a8f9e",
+        "outputId": "24981a72-843e-4877-9591-09a12aa73f28",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 51
         }
       },
       "source": [
@@ -555,7 +564,7 @@
         "frequencia_testes = vectorizer.transform(frases_teste)\n",
         "print(modelo.predict(frequencia_testes))"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,16 +599,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "8PdZuMJHYocv",
-        "outputId": "305ada0a-dabd-46e3-a536-b7be592f006d",
+        "outputId": "94ae2ad8-e8df-4205-d4d7-976400a37891",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 221
         }
       },
       "source": [
         "resultados = cross_val_predict(modelo, frequencia, sentimentos, cv = 19) #cv corresponde ao menor número de membros existentes na classe 'Sentimento', nesse caso, seria o valor total de 'felicidade'\n",
         "resultados"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,16 +649,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "bh4imKnRahoq",
-        "outputId": "7e7a7998-33ff-4bf6-d0ec-001919dc33cf",
+        "outputId": "116fbff1-0721-4ad3-ac67-2fa22449684e",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 187
         }
       },
       "source": [
         "target = ['felicidade', 'raiva', 'tristeza']\n",
         "print(classification_report(sentimentos, resultados, target))"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -695,15 +706,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "xv6R-N-OaxVC",
-        "outputId": "2e1e1b04-fbe6-4eee-ab94-886cda336465",
+        "outputId": "1237193b-1ae9-43f3-992a-787ff4d9b0d9",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 119
         }
       },
       "source": [
         "print(pd.crosstab(sentimentos, resultados, rownames = [\"Real\"], colnames=[\"Predito\"], margins=True))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,15 +745,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "uihM_VInasXB",
-        "outputId": "c9195833-661d-4fc7-cd55-66aa0276b504",
+        "outputId": "5198b45f-c213-4d58-95cf-4bfe7423efc3",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 34
         }
       },
       "source": [
         "accuracy_score(sentimentos, resultados)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
